--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  margin-top: 50px;
+  height: 200px;
+  width: 100%;
   z-index: 0;
 }
 
@@ -29,11 +32,8 @@ html {
 .navbar {
   display: none;
   width: 100%;
-  margin-top: 70px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin-top: 25px;
+  text-align: center;
 }
 
 .navbar > a {
@@ -116,6 +116,10 @@ html {
 
 @keyframes selected {
   from {
+    color: rgba(117, 250, 76, 1);
+  }
+
+  15% {
     color: white;
   }
 
