--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ html {
 .title {
   text-align: center;
   font-size: 70px;
+  z-index: 0;
 }
 
 .navbar {
@@ -34,6 +35,7 @@ html {
   width: 100%;
   margin-top: 25px;
   text-align: center;
+  z-index: 0;
 }
 
 .navbar > a {
@@ -62,7 +64,7 @@ html {
   width: 15px;
   height: 15px;
   background: white;
-  animation: animStar 20s linear infinite;
+  animation: animStar 20s linear;
   position: absolute;
   z-index: -10;
   bottom: -50px;
@@ -72,17 +74,17 @@ html {
   width: 10px;
   height: 10px;
   background: white;
-  animation: animStar 75s linear infinite;
+  animation: animStar 100s linear;
   position: absolute;
   z-index: -20;
   bottom: -50px;
 }
 
 .star3 {
-  width: 5px;
-  height: 5px;
+  width: 3px;
+  height: 3px;
   background: white;
-  animation: animStar 150s linear infinite;
+  animation: animStar 300s linear;
   position: absolute;
   z-index: -30;
   bottom: -50px;
@@ -105,9 +107,17 @@ html {
     color: rgba(117, 250, 76, 1);
   }
 
+  /* 25% {
+    color: rgba(117, 250, 76, 1);
+  } */
+
   50% {
     color: transparent;
   }
+  /* 
+  75% {
+    color: rgba(117, 250, 76, 1);
+  } */
 
   to {
     color: rgba(117, 250, 76, 1);
