--- a/styles/home.css
+++ b/styles/home.css
@@ -1,140 +1,145 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  color: rgba(117, 250, 76, 1);
-  font-family: "Ubuntu Mono", monospace;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: rgba(117, 250, 76, 1);
+    font-family: "Ubuntu Mono", monospace;
 }
 
 html {
-  height: 100vh;
-  width: 100vw;
-  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-  overflow: hidden;
+    height: 100vh;
+    width: 100vw;
+    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+    overflow: hidden;
 }
 
-
 .content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin-top: 50px;
-  height: 200px;
-  width: 100%;
-  z-index: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 50px;
+    height: 200px;
+    width: 100%;
+    z-index: 0;
 }
 
 .title {
-  text-align: center;
-  font-size: 70px;
-  z-index: 0;
+    text-align: center;
+    font-size: 70px;
+    z-index: 0;
 }
 
 .navbar {
-  display: none;
-  width: 100%;
-  margin-top: 25px;
-  text-align: center;
-  z-index: 0;
+    display: none;
+    width: 100%;
+    margin-top: 25px;
+    text-align: center;
+    z-index: 0;
+    animation: fade-down 1s linear;
 }
 
 .navbar > a {
-  margin: 0 10px;
-  text-decoration: none;
-  color: rgba(117, 250, 76, 1);
-  font-size: 20px;
+    animation: fade-down 3s ease-in;
+    margin: 0 10px;
+    text-decoration: none;
+    color: rgba(117, 250, 76, 1);
+    font-size: 20px;
 }
 
 .navbar > a:hover {
-  color: white;
+    color: white;
 }
 
 /* Animator Classes */
 
 .blinking {
-  animation: blinking 2s linear infinite;
+    animation: blinking 2s linear infinite;
 }
 
 .selected {
-  animation: selected 2s linear;
+    animation: selected 2s linear;
 }
 
 /* Star Stuff */
 .star1 {
-  width: 15px;
-  height: 15px;
-  background: white;
-  animation: animStar 20s linear;
-  position: absolute;
-  z-index: -10;
-  bottom: -50px;
+    width: 15px;
+    height: 15px;
+    background: white;
+    animation: animStar 20s linear;
+    position: absolute;
+    z-index: -10;
+    bottom: -50px;
 }
 
 .star2 {
-  width: 10px;
-  height: 10px;
-  background: white;
-  animation: animStar 100s linear;
-  position: absolute;
-  z-index: -20;
-  bottom: -50px;
+    width: 10px;
+    height: 10px;
+    background: white;
+    animation: animStar 100s linear;
+    position: absolute;
+    z-index: -20;
+    bottom: -50px;
 }
 
 .star3 {
-  width: 3px;
-  height: 3px;
-  background: white;
-  animation: animStar 300s linear;
-  position: absolute;
-  z-index: -30;
-  bottom: -50px;
+    width: 3px;
+    height: 3px;
+    background: white;
+    animation: animStar 300s linear;
+    position: absolute;
+    z-index: -30;
+    bottom: -50px;
 }
 
 /* Keyframes */
 
 @keyframes animStar {
-  from {
-    transform: translateY(0px);
-  }
+    0% {
+        transform: translateY(0px);
+    }
 
-  to {
-    transform: translateY(-1500px);
-  }
+    100% {
+        transform: translateY(-1500px);
+    }
 }
 
 @keyframes blinking {
-  from {
-    color: rgba(117, 250, 76, 1);
-  }
+    0% {
+        color: rgba(117, 250, 76, 1);
+    }
 
-  /* 25% {
-    color: rgba(117, 250, 76, 1);
-  } */
+    50% {
+        color: transparent;
+    }
 
-  50% {
-    color: transparent;
-  }
-  /* 
-  75% {
-    color: rgba(117, 250, 76, 1);
-  } */
-
-  to {
-    color: rgba(117, 250, 76, 1);
-  }
+    100% {
+        color: rgba(117, 250, 76, 1);
+    }
 }
 
 @keyframes selected {
-  from {
-    color: rgba(117, 250, 76, 1);
-  }
+    0% {
+        color: rgba(117, 250, 76, 1);
+    }
 
-  15% {
-    color: white;
-  }
+    15% {
+        color: white;
+    }
 
-  to {
-    color: rgba(117, 250, 76, 1);
-  }
+    100% {
+        color: rgba(117, 250, 76, 1);
+    }
+}
+
+@keyframes fade-down {
+    0% {
+        color: transparent;
+        transform: translateY(-35px);
+    }
+
+    100% {
+        color: rgba(117, 250, 76, 1);
+        transform: translateY(0px);
+    }
 }
