--- a/styles/home.css
+++ b/styles/home.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
 * {
     margin: 0;
     padding: 0;
@@ -28,6 +30,11 @@ html {
     text-align: center;
     font-size: 70px;
     z-index: 0;
+    width: fit-content;
+    margin: 0 auto;
+}
+.title:hover {
+    cursor: pointer;
 }
 
 .navbar {
