--- a/styles/home.css
+++ b/styles/home.css
@@ -40,6 +40,7 @@ body {
     top: 50%;
     left: 50%;
     border: 1px solid white;
+    background-color: white;
     border-radius: 50px;
     -webkit-border-radius: 50px;
     -moz-border-radius: 50px;
@@ -98,20 +99,12 @@ body {
         -o-transform: scale(1);
         opacity: 0;
     }
-    99% {
-        transform: scale(5000);
-        -webkit-transform: scale(5000);
-        -moz-transform: scale(5000);
-        -ms-transform: scale(5000);
-        -o-transform: scale(5000);
-        opacity: 1;
-}
     100% {
-        transform: scale(5000);
-        -webkit-transform: scale(5000);
-        -moz-transform: scale(5000);
-        -ms-transform: scale(5000);
-        -o-transform: scale(5000);
+        transform: scale(4000);
+        -webkit-transform: scale(4000);
+        -moz-transform: scale(4000);
+        -ms-transform: scale(4000);
+        -o-transform: scale(4000);
         opacity: 1;
 }
 }
