--- a/styles/info.css
+++ b/styles/info.css
@@ -1,68 +1,92 @@
-*:not(hr) {
-    margin: 0;
-    border: 0;
-    padding: 0;
-    box-sizing: border-box;
+*:not(hr, ul) {
+  margin: 0;
+  border: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 body::-webkit-scrollbar-thumb {
-    background-color: orange;
-    border-radius: 20px;
+  background-color: orange;
+  border-radius: 20px;
 }
 
 body {
-    height: 100vh;
-    width: 100vw;
-    background: radial-gradient(#1b2735 0%, #090a0f 100%);
-    color: white;
-    padding: 30px;
-    overflow-x: hidden;
-    overflow-y: overlay;
+  height: 100vh;
+  width: 100vw;
+  background: radial-gradient(#1b2735 0%, #090a0f 100%);
+  color: white;
+  padding: 50px;
+  overflow-x: hidden;
+  overflow-y: overlay;
 }
 
+/* --------------------- Back Button --------------------- */
 #back-btn {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: transparent;
-    text-decoration: none;
-    font-size: clamp(12px, 2vw, 20px);
-    border: 2px solid orange;
-    padding: 5px 5px;
-    border-radius: 0px 0px 15px 0px;
-    -webkit-border-radius: 0px 0px 15px 0px;
-    -moz-border-radius: 0px 0px 15px 0px;
-    -ms-border-radius: 0px 0px 15px 0px;
-    -o-border-radius: 0px 0px 15px 0px;
-    color: inherit;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: transparent;
+  text-decoration: none;
+  font-size: clamp(12px, 2vw, 20px);
+  border: 2px solid orange;
+  padding: 5px 5px;
+  border-radius: 0px 0px 15px 0px;
+  -webkit-border-radius: 0px 0px 15px 0px;
+  -moz-border-radius: 0px 0px 15px 0px;
+  -ms-border-radius: 0px 0px 15px 0px;
+  -o-border-radius: 0px 0px 15px 0px;
+  color: inherit;
 }
 #back-btn:hover {
-    background-color: orange;
-    cursor: pointer;
+  background-color: orange;
+  cursor: pointer;
 }
 
+/* --------------------- Avatar --------------------- */
 #avatar {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin: 30px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 30px 0px;
 }
 #avatar > img {
-    height: clamp(200px, 80vh, 700px);
+  height: clamp(200px, 80vh, 700px);
 }
 #avatar h1 {
-    margin-left: 10px;
-    font-size: clamp(40px, 10vw, 150px);
+  margin-left: 10px;
+  font-size: clamp(40px, 10vw, 150px);
+  text-shadow: 5px 5px black;
 }
 
 h2 {
-    font-size: clamp(30px, 6vw, 100px);
+  font-size: clamp(25px, 5vw, 90px);
+  width: fit-content;
+  border: 1px solid orange;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  padding: 0 5px;
+  margin: 100px 0 20px -20px;
+}
+h3 {
+  font-size: clamp(20px, 2vw, 80px);
 }
 
-p{
-    font-size: clamp(14px, 4vw, 20px);
+p {
+  font-size: clamp(14px, 4vw, 20px);
+}
+
+/* --------------------- Skills --------------------- */
+.horz-list {
+  display: flex;
+  flex-direction: row;
+}
+.horz-list > li {
+  margin-right: 30px;
 }
