Added Skill Tables + Download CV + Redesign

--- a/styles/info.css
+++ b/styles/info.css
@@ -1,8 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
 *:not(hr, ul) {
   margin: 0;
   border: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Ubuntu Mono", monospace;
 }
 
 body::-webkit-scrollbar {
@@ -13,19 +16,91 @@ body::-webkit-scrollbar-thumb {
   border-radius: 20px;
 }
 
+/* --------------------- General CSS --------------------- */
 body {
   height: 100vh;
   width: 100vw;
   background: radial-gradient(#1b2735 0%, #090a0f 100%);
   color: white;
-  padding: 50px;
   overflow-x: hidden;
   overflow-y: overlay;
+  padding: 0 50px 0 32vw;
+}
+
+h1 {
+  text-shadow: 5px 5px black;
+  font-size: clamp(40px, 10vw, 150px);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+  font-size: clamp(25px, 5vw, 90px);
+  /* width: fit-content; */
+  padding: 0 5px;
+  margin-bottom: 50px;
+  color: rgba(117, 250, 76, 1);
+  text-align: center;
+}
+
+h3 {
+  font-size: clamp(20px, 2vw, 80px);
+}
+
+p {
+  font-size: clamp(14px, 4vw, 20px);
+}
+
+.section {
+  padding: 5px;
+  margin: 50vh 0;
+}
+
+/* --------------------- Title Name --------------------- */
+#title-name {
+  height: 100vh;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+/* --------------------- Portrait of me :) --------------------- */
+#me {
+  width: 30vw;
+  background-size: cover;
+  background-position: bottom;
+}
+
+.frozen-pos {
+  position: absolute;
+  left: 10%;
+  bottom: 50%;
+  transform: translateY(50%);
+  -webkit-transform: translateY(50%);
+  -moz-transform: translateY(50%);
+  -ms-transform: translateY(50%);
+  -o-transform: translateY(50%);
+}
+
+.scroll-pos {
+  position: fixed;
+  left: 0;
+  bottom: 50%;
+  transform: translateY(50%);
+  -webkit-transform: translateY(50%);
+  -moz-transform: translateY(50%);
+  -ms-transform: translateY(50%);
+  -o-transform: translateY(50%);
+  transition: 1s ease;
+  -webkit-transition: 1s ease;
+  -moz-transition: 1s ease;
+  -ms-transition: 1s ease;
+  -o-transition: 1s ease;
 }
 
 /* --------------------- Back Button --------------------- */
 #back-btn {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background: transparent;
@@ -45,44 +120,53 @@ body {
   cursor: pointer;
 }
 
-/* --------------------- Avatar --------------------- */
-#avatar {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  margin: 30px 0px;
+/* --------------------- CV Button --------------------- */
+#cv-btn {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background: transparent;
+  text-decoration: none;
+  font-size: clamp(12px, 2vw, 20px);
+  border: 2px solid orange;
+  padding: 5px 5px;
+  border-radius: 0px 15px 0px 0px;
+  -webkit-border-radius: 0px 15px 0px 0px;
+  -moz-border-radius: 0px 15px 0px 0px;
+  -ms-border-radius: 0px 15px 0px 0px;
+  -o-border-radius: 0px 15px 0px 0px;
+  color: inherit;
 }
-#avatar > img {
-  height: clamp(200px, 80vh, 700px);
-}
-#avatar h1 {
-  margin-left: 10px;
-  font-size: clamp(40px, 10vw, 150px);
-  text-shadow: 5px 5px black;
-}
-
-h2 {
-  font-size: clamp(25px, 5vw, 90px);
-  width: fit-content;
-  border: 1px solid orange;
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
-  padding: 0 5px;
-  margin: 100px 0 20px -20px;
-}
-h3 {
-  font-size: clamp(20px, 2vw, 80px);
-}
-
-p {
-  font-size: clamp(14px, 4vw, 20px);
+#cv-btn:hover {
+  background-color: orange;
+  cursor: pointer;
 }
 
 /* --------------------- Skills --------------------- */
+.skills-tables {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  font-size: clamp(15px, 3vw, 25px);
+}
+
+.skills-tables table {
+  border: 6px solid gray;
+  padding: 5px 10px;
+  min-width: 300px;
+  margin: 10px;
+  border-spacing: 10px;
+}
+.skills-tables td {
+  background-color: rgb(72, 177, 40);
+  padding-left: 5px;
+}
+
+.skills-tables th {
+  text-align: start;
+}
+
 .horz-list {
   display: flex;
   flex-direction: row;
